# pipripv2_mvp

./: .gitignore  Dockerfile  README.md  app.py  arxiv_api.py  arxiv_utils.py  docker-compose.yml  main.py  paper.py  pyproject.toml  requirements.txt
backend/: edge.py  gemini.py  gemini_instructions.txt  global_methods.py  graph.py  graph_manager.py  l2graph.py  paper.py  pdf_parsers.py  topic.py
backend/api_utils/: arxiv_utils.py  gscholar_utils.py  semantic_scholar_utils.py
backend/db_queries/: dev_data.txt  query_extractor.py  query_generator.py
backend/db_queries/!Old/: dev_data.txt
backend/gemini/: data_format.json  gemini_client.py  output_parser.py  query_generator.py
backend/gemini/prompts/: generate_l1_topic_graph.txt  generate_l1_topics.txt  generate_l1_topics_and_edges.txt  generate_l2_topic_graph.txt  generate_l2_topics_and_edges.txt  generate_topic_edges.txt  generate_topic_topic_edges.txt  (+6 more)
backend/memgraph/: db_operations.py  db_utils.py  query_generator.py
backend/resources/: dev_data.txt
gemini/: data_format.json  gemini_client.py  output_parser.py
gemini/config/: api_key.yaml
gemini/prompts/: starter.txt
memgraph/: db_operations.py
memgraph/database/: __init__.py  connection.py  memgraph.py
resources/: piprip_data.txt
static/css/: style.css
static/js/: clear_button.js  d3_models.js  index.js  input_progress_handler.js  modified_index.js  modified_index_smc2.js  modified_index_toggle.js  modified_index_vF.js
templates/: base.html  index.html  query.html
test_apis/: abstract_extractor.py  pdf_downloader.py  ref_extractor.py
(+4 files in other folders)
