[tool.poetry]
name = "pip-rip"
version = "0.1.0"
description = "A knowledge graph generator for research papers"
authors = ["Chelsea Chia, Lilian Guo, Sabrina Chow"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = "^1.1.2"
pymgclient = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
